fix: alignment

--- a/src/components/Homepage/subcomponents/BannerSection.module.sass
+++ b/src/components/Homepage/subcomponents/BannerSection.module.sass
@@ -31,7 +31,7 @@
     @media screen and ( min-width: 1200px )
         align-items: flex-start
         text-align: left
-        padding-left: 200px
+        padding: 0 5%
         height: 700px
         padding-top: 120px
         background-position: center
